--- a/src/common/stylus/reset.styl
+++ b/src/common/stylus/reset.styl
@@ -4,18 +4,25 @@
  */
 
 
+
 html 
-  font-size: 100px
+ 
   margin: 0
   padding: 0
   -webkit-text-size-adjust: 100%
   font-family: -apple-system, "PingFang SC", "Helvetica Neue", Helvetica, STHeiTi, sans-serif
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
-  background: transparent
+  -webkit-tap-highlight-color: transparent
+  background: #ffffff
+  color: #000
+  height: 100%
+  font-size: 100px
 
 body 
-  font-size: 12px
-  // width: 100%
+  font-family: Arial, "Microsoft Yahei", "Helvetica Neue", Helvetica, sans-serif
+  font-size: 14px
+  line-height: 1
+  -webkit-text-size-adjust: none
+  
   height: 100%
   -webkit-overflow-scrolling: touch
   width: 6.4rem;
@@ -27,34 +34,29 @@ body
   margin: 0;
   padding: 0;
   
-
+article,aside,footer,header,section,nav,figure,figcaption,hgroup,details,menu
+  display:block
 
 
 input, select, textarea 
 
   border: 0
-
-  // -webkit-appearance: none
-
-  // appearance: none
-
-
+  outline: none
 
 ol, ul 
 
   list-style: none
-
-
 
 *:not(input, select, textArea) 
 
   -webkit-user-select: none
 
 
+fieldset,img
+  border:0
+img,object,input,textarea,button,select
+  vertical-align:middle
 
-img, a 
-
-  -webkit-touch-callout: none
 
 
 a, a:active, a:hover 
@@ -66,5 +68,6 @@ a, a:active, a:hover
 a, button, input, textarea 
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+
 
 
