--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -1,20 +1,23 @@
 // 颜色定义规范
-$color-background = #222
+$mainBgColor = #ff6600
+
 $color-background-d = rgba(0, 0, 0, 0.3)
-$color-highlight-background = #333
+$color-highlight = #333
 $color-dialog-background = #666
-$color-theme = #ffcd32
+$color-theme = #ff6600
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-sub-theme = #d93f30
 $color-text = #fff
-$color-text-d = rgba(255, 255, 255, 0.3)
+$color-text-c = #c3c3c3
+$color-text-d = #666
+
 $color-text-l = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
 
 //字体定义规范
-$font-size-small-s = 10px
-$font-size-small = 12px
-$font-size-medium = 14px
-$font-size-medium-x = 16px
-$font-size-large = 18px
+$font-highlight = .2rem
+$font-info = .18rem
+$font-size-22 = .22rem
+$font-icon = .3rem
+$font-size-24 = .24rem
 $font-size-large-x = 22px
