--- a/src/common/stylus/reset.styl
+++ b/src/common/stylus/reset.styl
@@ -12,7 +12,7 @@ html
   -webkit-text-size-adjust: 100%
   font-family: -apple-system, "PingFang SC", "Helvetica Neue", Helvetica, STHeiTi, sans-serif
   -webkit-tap-highlight-color: transparent
-  background: #ffffff
+  background: #f3f4f6
   color: #000
   height: 100%
   font-size: 100px
