--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -20,3 +20,5 @@ extend-click()
     left: -10px
     right: -10px
     bottom: -10px
+px2rem(px)
+  return unit(px * 320 / designWidth / 20, 'rem')
